# copier-poetry

./: .gitignore  .pre-commit-config.yaml  copier.yml  pyproject.toml
.github/workflows/: ci.yml
project/: .gitignore  .pre-commit-config.yaml  pyproject.toml.jinja
project/docs/: macros.py
