[tool.poetry]
name = "copier-poetry"
version = "0.3.2"
description = "Copier template for Python projects managed by Poetry."
authors = ["Timothée Mazzucotelli <pawamoy@pm.me>"]
license = "ISC License"

[tool.poetry.dependencies]
python = "^3.6.1,<4.0"
pre-commit = "^2.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
